--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^2.0.0",
     "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "stimulus": "^2.0.0",
