--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.3",
+    "flatpickr": "^4.6.9",
     "jquery": "^3.5.1",
     "mapbox-gl": "^2.0.0",
     "places.js": "^1.19.0",
