--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
     "stimulus": "^2.0.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpacker-pwa": "^0.1.2"
   },
   "version": "0.1.0",
   "devDependencies": {
