--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
     "start_url": "/",
     "scope": "/",
     "display": "standalone",
-    "background_color": "#00adb5",
-    "theme_color": "#00adb5",
+    "background_color": "#007880",
+    "theme_color": "#007880",
     "description": "TravelMates - the best mate for solo travelling.",
     "icons": [{
         "src": "/icons/android-icon-36x36.png",
