FEAT: added slider on location show and added multiple location images per location

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
     "stimulus": "^2.0.0",
+    "tiny-slider": "^2.9.3",
     "turbolinks": "^5.2.0",
     "webpacker-pwa": "^0.1.2"
   },
