--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "flatpickr": "^4.6.9",
     "jquery": "^3.5.1",
@@ -18,6 +19,7 @@
     "stimulus": "^2.0.0",
     "tiny-slider": "^2.9.3",
     "turbolinks": "^5.2.0",
+    "turbolinks-animate": "^3.2.1",
     "webpacker-pwa": "^0.1.2"
   },
   "version": "0.1.0",
