--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "flatpickr": "^4.6.9",
+    "isotope-layout": "^3.0.6",
     "jquery": "^3.5.1",
     "mapbox-gl": "^2.0.0",
     "places.js": "^1.19.0",
