--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
+  },
+  "engines": {
+    "npm": "9.6.6",
+    "node": ">=20.0.0"
   }
 }
